2004-07-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/malloc.dox: Document realloc() internals.
	* include/stdlib.h: include realloc().
	* libc/stdlib/Makefile.am: include realloc.c.
	* libc/stdlib/malloc.c: move out shared parts to stdlib_private.h.
	* libc/stdlib/stdlib_private.h: [new] shared file for malloc()/realloc().
	* libc/stdlib/realloc.c: [new] implementation of realloc().

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: protect function-like macros, fix savannah bug #9013.
	* include/avr/ina90.h: Ditto.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdint.h: created from old inttypes.h.
	* include/inttypes.h: reduced to #include <stdint.h>.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Doc update: binary vs. raw streams explained,
	fix for savannah bug #9704.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs_p.c: pgm_read_byte(p++) -> pgm_read_byte(p) ... p++;
	* libc/stdio/puts_p.c: Ditto.
	* libc/stdio/vfprintf.c: Ditto.
	* libc/stdio/vfscanf.c: Ditto.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Fix the use of progmem tables, closes
	savannah bug #9669.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega32

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs_p.c: replace PRG_RDB by pgm_read_byte
	* libc/stdio/puts_p.c: Ditto.
	* libc/stdio/vfprintf.c: Ditto.
	* libc/stdio/vfscanf.c: Ditto.

2004-07-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/strtod.S: fix parsing of a partial
	exponent, fix *endp return value (savanna bug #2924)

2004-07-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/pow.S: localize labels, fix pow(N, 0).

2004-07-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: avr-gcc >= 3.5 will be able to
	provide [u]int32_t when -mint8 is in effect.

2004-07-02  Theodore A. Roth  <troth@openavr.org>
